Patch after Jakub Muczyń